--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,110 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #0f1b4c;
+}
+
 html {
     font-size: 62.5%;
 }
 
 body {
     font-size: 1.6rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
+/* Common */
+.content {
+    width: 1110px;
+    max-width: calc(100% - 48px);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 98px;
+    border-radius: 8px;
+    padding: 18px 16px;
+    background: var(--primary-color);
+    font-weight: 500;
+    font-size: 1.4rem;
+    color: #ffffff;
+    text-align: center;
+}
+
+/* Header */
+.header {
+    background: #e6f0ff;
+    height: 100vh;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    padding-top: 38px;
+}
+
+.navbar ul {
+    display: flex;
+    margin-left: 50px;
+}
+
+.navbar ul a {
+    position: relative;
+    font-weight: 500;
+    font-size: 1.4rem;
+    color: #4f5361;
+    padding: 8px 14px;
+}
+
+.navbar ul a::after {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 30%;
+    height: 3px;
+    right: 14px;
+    bottom: 3px;
+    border-radius: 3px;
+    background: var(--primary-color);
+    opacity: 0;
+}
+
+.navbar ul a:hover::after {
+    opacity: 1;
+    transition: 0.3s;
+}
+
+.navbar ul a:hover {
+    color: var(--primary-color);
+    transition: 0.3s;
+}
+
+.navbar .actions {
+    margin-left: auto;
+}
+
+.navbar .action-link {
+    font-weight: 500;
+    font-size: 1.4rem;
+    color: var(--primary-color);
+}
+
+.navbar .action-btn {
+    padding: 12px 16px;
+    margin-left: 18px;
+    border: 1px solid transparent;
+}
+
+.navbar .action-btn:hover {
+    background: #ffffff;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    transition: 0.3s;
+}
