--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -109,3 +109,48 @@ a {
     border: 1px solid var(--primary-color);
     transition: 0.3s;
 }
+
+.hero {
+    margin-top: 130px;
+}
+
+.hero .info {
+    width: 51%;
+}
+
+.hero .sub-title {
+    color: #687690;
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+}
+
+.hero .title {
+    color: #000336;
+    font-size: 6.2rem;
+    font-weight: 700;
+    line-height: 1.19;
+    margin-top: 8px;
+}
+
+.hero .desc {
+    color: #5a6473;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.7;
+    margin-top: 30px;
+}
+
+.hero .hero-cta {
+    min-width: 170px;
+    margin-top: 40px;
+    font-size: 1.3rem;
+    padding-top: 18.5px;
+    padding-bottom: 18.5px;
+    transition: 0.5s;
+}
+
+.hero .hero-cta:hover {
+    opacity: 0.8;
+}
