fix: border radius of cta button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,6 +150,7 @@ a {
     padding-top: 18.5px;
     padding-bottom: 18.5px;
     transition: 0.5s;
+    border-radius: 12px;
 }
 
 .hero .hero-cta:hover {
