feat: code clients

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,7 +39,7 @@ a {
     text-align: center;
 }
 
-/* Header */
+/*================ Header =================*/
 .header {
     background: #e6f0ff;
     height: 100vh;
@@ -50,6 +50,7 @@ a {
     display: flex;
     align-items: center;
     padding-top: 38px;
+    padding-bottom: 18px;
 }
 
 .navbar ul {
@@ -112,7 +113,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    margin-top: 112px;
 }
 
 .hero .info {
@@ -161,4 +162,45 @@ a {
     position: absolute;
     bottom: 0;
     right: calc((100vw - 1110px) / 2 - 100px);
+}
+
+/*================= Clients ===================*/
+.clients {
+    margin-top: 122px;
+}
+
+.clients .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.clients .desc {
+    color: #7d8589;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.25;
+}
+
+.clients .row-desc {
+    margin-top: 23px;
+}
+
+.clients .images {
+    margin-top: 96px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    height: 90px;
+    padding: 0 41px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
 }
