--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,13 @@ a {
     text-align: center;
 }
 
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 2);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 /*================ Header =================*/
 .header {
     background: #e6f0ff;
@@ -365,19 +372,22 @@ a {
     padding: 17px 20px 24px;
 }
 
-.featured .item .title {
+.featured .item .title a {
     color: #000339;
     font-size: 2rem;
     font-weight: 600;
-    line-height: 1;
+    line-height: 1.5;
+    word-break: break;
 }
 
 .featured .item .desc {
+    --line-clamp: 3;
     margin-top: 11px;
     color: #a3a6ab;
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.5;
+    word-break: break;
 }
 
 .featured .item .info {
