--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,7 +173,8 @@ a {
 
 /*================= Clients ===================*/
 .clients {
-    margin-top: 122px;
+    margin-top: 79px;
+    padding: 43px 0 41px;
 }
 
 .clients .row {
@@ -215,7 +216,8 @@ a {
 /* ============= Guides ==================== */
 
 .guides {
-    margin-top: 174px;
+    margin-top: 40px;
+    padding: 79px 0;
 }
 
 .guides .sub-title {
@@ -306,7 +308,7 @@ a {
 
 /* ============ Featured ============= */
 .featured {
-    margin-top: 120px;
+    margin-top: 41px;
     background: #f5fafe;
     padding: 110px 0;
 }
