--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -413,3 +413,155 @@ a {
 .featured .item .icon:first-child {
     margin-left: 0;
 }
+
+/* ============== Statistics ================= */
+.stats {
+    margin-top: 75px;
+    padding: 50px 0;
+}
+
+.stats .content {
+    width: 1048px;
+}
+
+.stats .row {
+    display: flex;
+}
+
+.stats .img-block,
+.stats .info {
+    width: 50%;
+}
+
+.stats .img-block {
+    position: relative;
+}
+
+.stats .img-block .image {
+    display: block;
+    margin-left: auto;
+    width: 400px;
+    height: 460px;
+    object-fit: cover;
+    border-radius: 12px;
+    box-shadow: 40px 80px 155px 0 rgba(30, 103, 113, 0.03);
+}
+
+.stats .info {
+    padding: 79px 0 0 165px;
+}
+
+.stats .sub-title {
+    position: relative;
+    width: 269px;
+    color: #000339;
+    font-size: 35px;
+    font-weight: 600;
+    line-height: 1.28;
+}
+
+.stats .sub-title::before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 41px;
+    height: 4px;
+    border-radius: 12px;
+    background: #000339;
+    left: 0;
+    top: -10px;
+}
+
+.stats .info .desc {
+    margin-top: 20px;
+    color: #5a6473;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.875;
+    width: 309px;
+}
+
+.stats .stats-trend {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 239px;
+    border-radius: 0 0 12px 12px;
+    background: #fff;
+    box-shadow: 90px 85px 100px 0 rgba(0, 0, 0, 0.06);
+    padding: 45px 22px 40px;
+}
+
+.stats .stats-trend .value {
+    color: #000339;
+    font-size: 26px;
+    font-weight: 700;
+    letter-spacing: 0.26px;
+}
+
+.stats .stats-trend .icon {
+    margin-left: auto;
+}
+
+.stats .stats-trend .desc {
+    color: #a7a7a7;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-top: 8px;
+}
+
+.stats .stats-trend .seperate {
+    height: 1.2px;
+    background: #e9e9e9;
+    margin-top: 25px;
+}
+
+.stats .avatar-block {
+    margin-top: 26px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16.34px 13.92px;
+}
+
+.stats .avatar-group {
+    display: flex;
+}
+
+.stats .avatar-group .avatar {
+    width: 16px;
+    height: 16px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: -3px;
+    color: #fff;
+    font-size: 9px;
+    font-weight: 450;
+    background: var(--bg-color, #24d6d9);
+    border-radius: 50%;
+    line-height: 16px;
+    text-align: center;
+}
+
+.stats .avatar-group .avatar:first-child {
+    margin-left: 0;
+}
+
+.stats .row-qty {
+    margin-top: 110px;
+    justify-content: space-between;
+    padding: 0 32px;
+}
+
+.stats .qty {
+    color: #000;
+    font-size: 64px;
+    font-weight: 600;
+}
+
+.stats .qty-desc {
+    margin-top: 24px;
+    color: #7b8087;
+    font-size: 18px;
+    font-weight: 500;
+}
