--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -475,7 +475,7 @@ a {
 .stats .info .desc {
     margin-top: 20px;
     color: #5a6473;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.875;
     width: 309px;
@@ -494,7 +494,7 @@ a {
 
 .stats .stats-trend .value {
     color: #000339;
-    font-size: 26px;
+    font-size: 2.6rem;
     font-weight: 700;
     letter-spacing: 0.26px;
 }
@@ -505,7 +505,7 @@ a {
 
 .stats .stats-trend .desc {
     color: #a7a7a7;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.5;
     margin-top: 8px;
@@ -535,7 +535,7 @@ a {
     border-radius: 50%;
     margin-left: -3px;
     color: #fff;
-    font-size: 9px;
+    font-size: 0.9rem;
     font-weight: 450;
     background: var(--bg-color, #24d6d9);
     border-radius: 50%;
@@ -555,14 +555,14 @@ a {
 
 .stats .qty {
     color: #000;
-    font-size: 64px;
+    font-size: 6.4rem;
     font-weight: 600;
 }
 
 .stats .qty-desc {
     margin-top: 24px;
     color: #7b8087;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 500;
 }
 
@@ -589,7 +589,7 @@ a {
 
 .subscription .info .sub-title {
     color: #fff;
-    font-size: 35px;
+    font-size: 3.5rem;
     font-weight: 600;
     line-height: 1.5;
 }
@@ -597,7 +597,7 @@ a {
 .subscription .info .desc {
     margin-top: 15px;
     color: #fff;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.9;
     opacity: 0.75;
@@ -614,4 +614,80 @@ a {
     position: absolute;
     right: 221px;
     bottom: 0;
+}
+
+/* =============== Footer ==================== */
+.footer {
+    margin-top: 55px;
+    padding: 50px 0 58px;
+}
+
+.footer .row {
+    display: flex;
+}
+
+.footer .row-top {
+    gap: 185px;
+}
+
+.footer .heading {
+    color: #1c1c1d;
+    font-family: Lato;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.footer .list,
+.footer .desc {
+    margin-top: 42px;
+}
+
+.footer .item {
+    margin-top: 18px;
+}
+
+.footer .item a,
+.footer .desc {
+    color: #7a7a7e;
+    font-size: 1.6rem;
+    font-weight: 400;
+    white-space: nowrap;
+}
+
+.footer .desc {
+    white-space: normal;
+    line-height: 1.75;
+}
+
+.footer .social {
+    margin-top: 40px;
+    display: flex;
+    gap: 17px;
+}
+
+.footer .social .social-link {
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.footer .social .social-link:hover {
+    background: #f9f9f9;
+}
+
+.footer .row-bottom {
+    display: flex;
+    align-items: center;
+    margin-top: 81px;
+    justify-content: space-between;
+}
+
+.footer .copyright {
+    color: #c2c2c2;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
