--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,17 +47,18 @@ a {
 }
 
 /*================ Header =================*/
-.header {
+.fixed-header {
     background: #e6f0ff;
-    height: 100vh;
-    position: relative;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
-    padding-bottom: 18px;
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -120,8 +121,14 @@ a {
     border: 1px solid var(--primary-color);
 }
 
+.hero-wrap {
+    background: #e6f0ff;
+    height: calc(100vh - 90px);
+    position: relative;
+}
+
 .hero {
-    margin-top: 112px;
+    padding-top: 126px;
 }
 
 .hero .info {
