--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,7 +4,7 @@
     display: none;
   }
 
-  li.show-on-mobile {
+  .show-on-mobile {
     display: none;
   }
 }
@@ -99,11 +99,64 @@
   .featured .list {
     grid-template-columns: 1fr 1fr;
   }
+
+  .stats .row {
+    flex-direction: column;
+  }
+
+  .stats .img-block {
+    order: 2;
+  }
+
+  .stats .info {
+    padding: 0 0 79px 0;
+    order: 1;
+  }
+
+  .stats .img-block,
+  .stats .info {
+    width: 100%;
+  }
+
+  .stats .sub-title {
+    width: 70%;
+  }
+
+  .stats .info .desc {
+    width: 100%;
+  }
+
+  .stats .row-qty {
+    flex-direction: row;
+  }
+
+  .stats .qty {
+    font-size: 5rem;
+  }
+
+  .stats .qty-desc {
+    font-size: 1.5rem;
+  }
+
+  .subscription .image {
+    display: none;
+  }
+
+  .subscription .info {
+    text-align: center;
+    width: 100%;
+  }
+
+  .footer .row-top {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 60px;
+    column-gap: 100px;
+  }
 }
 
 /* Tablet */
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  li.show-on-mobile {
+  .show-on-mobile {
     display: none;
   }
 }
@@ -115,7 +168,75 @@
     padding: 40px;
   }
 
+  .hide-on-mobile {
+    display: none !important;
+  }
+
   .navbar .actions {
     display: none;
+  }
+
+  .hero-wrap {
+    height: calc(100vh - 77px);
+  }
+
+  .hero-wrap .title {
+    font-size: 4.5rem;
+    margin-top: 20px;
+  }
+
+  .hero-wrap .desc {
+    width: 100%;
+  }
+
+  .clients .images {
+    row-gap: 20px;
+  }
+
+  .list-guide {
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+
+  .featured .list {
+    grid-template-columns: 1fr;
+  }
+
+  .featured .sub-title {
+    width: 100%;
+    line-height: 1.2;
+  }
+
+  .view-all.show-on-mobile .link {
+    justify-content: flex-start;
+    margin-top: 30px;
+  }
+
+  .stats .sub-title {
+    width: 100%;
+  }
+
+  .stats .img-block .image {
+    width: 100%;
+  }
+
+  .stats .row-qty {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 35px 20px;
+  }
+
+  .qty-item {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .subscription .info {
+    padding: 0;
+  }
+
+  .footer .row-bottom {
+    flex-direction: column;
   }
 }
